# open-nl2data-bench

./: .gitignore  API.md  CLAUDE.md  LICENSE  OpenNL2SQL-Bench策划方案.md  QUICKSTART.md  README.md  pyproject.toml
.example_results/: run_001.json  run_002.json  run_003.json  run_004.json
data/questions/ecommerce/: README.md
data/questions/ecommerce/order/: L1_basic.yaml  L2_intermediate.yaml
data/questions/ecommerce/payment/: L1_basic.yaml
data/schemas/doris/: ecommerce_schema.sql
data/schemas/mysql/: ecommerce_schema.sql
data/schemas/postgresql/: ecommerce_schema.sql
docs/adapters/: http-sut-adapter.md
docs/tutorials/: getting-started.md
examples/: compare_test_runs.py  generate_enhanced_report.py  generate_sample_report.py
examples/ecommerce/: README.md
examples/ecommerce/questions/: L1_001_count_users.yaml  L1_002_avg_order.yaml  L2_001_top_products.yaml  L3_001_monthly_buyers.yaml
examples/reports/: enhanced_report_with_charts.html  sample_report.html
onb/: __init__.py
onb/adapters/: __init__.py
onb/adapters/database/: __init__.py  base.py  clickhouse.py  doris.py  mysql.py  postgresql.py
onb/adapters/sut/: __init__.py  base.py  http.py  mock.py
onb/cli/: __init__.py  main.py
onb/core/: config.py  exceptions.py  types.py
onb/evaluation/: __init__.py  comparator.py  cost.py  performance.py  robustness.py
onb/questions/: __init__.py  loader.py
onb/reporting/: __init__.py  charts.py  comparison.py  html_generator.py
onb/runner/: __init__.py  test_runner.py
onb/schemas/: __init__.py  base.py  generator.py
onb/schemas/ecommerce/: __init__.py  aftersales.py  inventory.py  logistics.py  marketing.py  merchant.py  operations.py  order.py  payment.py  points.py  product.py  search.py  user.py
tests/: conftest.py
tests/unit/: test_charts.py  test_cli.py  test_clickhouse_adapter.py  test_comparator.py  test_comparison.py  test_config.py  test_cost.py  test_database_adapter.py  test_doris_adapter.py  test_html_generator.py  test_http_adapter.py  test_performance.py  test_postgresql_adapter.py  test_question_loader.py  test_robustness.py  test_runner.py  test_schema_generator.py  test_sut_adapter.py  test_types.py
